k8s-service/go-web-v3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: go-web
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
#    - host: "www.lvhj.top"  # 替换为你想要的域名或使用空字符串""以支持无主机名 www.lvhj.top
    - host: ""  # 替换为你想要的域名或使用空字符串""以支持无主机名 www.lvhj.top
      http:
        paths:
          - path: /go-v3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-web3
                port:
                  number: 80
          - path: /go-v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-web
                port:
                  number: 80
